--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -293,12 +293,12 @@ state of preservation did not allow them to be re-analysed.
 \fontsize{8pt}{8pt}\selectfont
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1224}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2449}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1429}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1633}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1224}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2041}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}@{}}
 \caption{Overview of the modern and archaeological limpet specimens
 analysed in this study.}\tabularnewline
 \toprule\noalign{}
@@ -350,9 +350,9 @@ ORK-LT5 & \(\delta\)\textsuperscript{18}O and
 & & & & & \\
 & & & & & \\
 Archaeological & \citep{Surge2012-ba} & \emph{P. vulgata} & Rack Wick
-Bay - & QG1-7188-1 & Stable oxygen \\
-& & & Westray (UK) & QG1-7189-2 & and carbon \\
-& & & & QG2-1061-1 & isotope analysis \\
+Bay - & QG1-7188-1 & \(\delta\)\textsuperscript{18}O \\
+& & & Westray (UK) & QG1-7189-2 & and \(\delta\)\textsuperscript{13}C \\
+& & & & QG2-1061-1 & analysis \\
 & & & & QG2-1064-1 & \\
 & & & & QG2-7180-1 & \\
 & & & & QG2-7180-2 & \\
@@ -427,15 +427,15 @@ ratio of intensities of the peaks above.
 
 Using this system we carried out elemental imaging of the shell
 specimens at a resolution of 50--100 µm distance between sampling spots.
-Each spot was irradiated 10 times with the 3 first spectra discarded as
+Each spot was irradiated 10 times with the first 3 spectra discarded as
 a cleaning step and the remaining spectra summed to get an average Mg/Ca
 intensity ratio for each sample spot. Subsequently, we re-sampled the
 section using a line scan at 10 µm resolution. This leads to an overlap
 between sample spots, but also allows for a continuous record without
 gaps. Intensity ratios were filtered for cases with high relative
-standard deviation (i.e.~more than 10\%). These occurred in places where
-the previous sampling procedures for carbonate powder as part of the
-oxygen isotope analysis left an uneven sample surface introducing
+standard deviation (i.e., more than 10\%). These occurred in places
+where the previous sampling procedures for carbonate powder as part of
+the oxygen isotope analysis left an uneven sample surface introducing
 variability in the plasma generation and thus uncertainty in the data of
 these locations.
 
@@ -445,14 +445,14 @@ High-quality \(\delta\)\textsuperscript{18}O values were acquired from
 previous publications on \emph{P. vulgata}
 \citep{Surge2012-ba, Graniero2017-io}, \emph{N. deaureata} and \emph{N.
 magellanica} \citep{Nicastro2020-ih}, in which detailed descriptions of
-the stable isotope analysis methodology can be found. In short, all
-shells were sectioned along the main growth axis to expose the internal
-growth structure. From the exposed section carbonate powder samples were
-acquired using a micromill with resolutions of 100--200 µm and by
-targeting the calcitic M+2 layer of the shells. Analytical precision of
-the isotope values was consistently at 0.05--0.10‰ and values are
-reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee
-Belemnite) standard.
+the methodology for the stable isotope analyses can be found. In short,
+all shells were sectioned along the maximum growth axis to expose the
+internal growth structure. From the exposed section carbonate powder
+samples were acquired using a micromill with resolutions of 100--200 µm
+and by targeting the calcitic M+2 layer of the shells. Analytical
+precision of the isotope ratios was consistently at 0.05--0.10‰ and
+values are reported in per mil units (‰) relative to the VPDB (Vienna
+Pee Dee Belemnite) standard.
 
 \begin{figure}
 
@@ -462,21 +462,21 @@ Belemnite) standard.
 
 }
 
-\caption{\label{fig-Nac_iso}Isotope values of \emph{Nacella} sp. limpet
+\caption{\label{fig-Nac_iso}Isotope values of \emph{Nacella} spp. limpet
 shells from Cambaceres Bay.}
 
 \end{figure}%
 
 Figure~\ref{fig-Nac_iso} and Figure~\ref{fig-Pat_iso} show the
 previously acquired sequential \(\delta\)\textsuperscript{18}O-values of
-limpet shells by species (\emph{Nacella} sp., and \emph{Patella
-vulgata}, respectively. Due to the high sampling resolution, all shells
+limpet shells by species (\emph{Nacella} spp., and \emph{Patella
+vulgata}, respectively). Due to the high-resolution sampling, all shells
 show seasonally resolved and multi-year quasi-sinusoidal records of SST
-change, with \emph{Nacella} sp. shells living 2--3 years and \emph{P.
+change, with \emph{Nacella} spp. shells living 2--3 years and \emph{P.
 vulgata} living regularly over 3 years. In those instances where longer
-lifetimes are encountered (i.e.~specimen QG1-7246-1,
-Figure~\ref{fig-Pat_iso} b) the temporal-resolution is reduced from more
-than a dozen of samples per year, to only around 7.
+lifespans resulted in slow growth rates below 1 mm/yr (i.e.~specimen
+QG1-7246-1, Figure~\ref{fig-Pat_iso} b), the temporal-resolution is
+reduced from more than a dozen of samples per year, to only around 7.
 
 \begin{figure}[H]
 
@@ -495,21 +495,22 @@ limpet shells from Quoygrew (QG, \emph{a-g}) and Rack Wick Bay (ORK,
 \subsection{Dynamic Time Warping}\label{dynamic-time-warping}
 
 Because it is not possible to directly associate the exact sample
-locations used in the analysis of stable oxygen isotopes with the LIBS
+locations used in the analysis of oxygen isotope ratios with the LIBS
 data, we used dynamic time warping (DTW) to align the time series of
-\(\delta\)\textsuperscript{18}O-values and Mg/Ca ratios. DTW is an
-algorithm that measures similarity between two proxy-sequences, which
+\(\delta\)\textsuperscript{18}O values and Mg/Ca ratios. DTW is an
+algorithm that measures similarity between two proxy sequences, which
 may vary in sampling resolution or interval. By stretching or
 compressing sections of the series, DTW finds the probable alignment
-between the two sequences. This allows us to compare the proxy data sets
+between the two sequences. This allows us to compare the proxy datasets
 more effectively, ensuring that the temporal dynamics of each shell are
 accurately matched despite possible discrepancies in sampling intervals
 or rates. We applied the DTW algorithm using the \texttt{dtw} package in
 R \citep{Giorgino2009-sj, R_Core_Team2020-mk}, which provides a robust
 framework for aligning time series data. This involved selecting
 appropriate distance measures and constraints to ensure meaningful
-alignment. The process involved iterative adjustments to minimise the
-overall distance between corresponding points in the two data sets.
+alignment (see code in \citep{Hausmann_2024OSF}). The process involved
+iterative adjustments to minimise the overall distance between
+corresponding points in the two data sets.
 
 \section{Results}\label{Results}
 
@@ -518,19 +519,20 @@ vulgata}}{Patella vulgata}}\label{patella-vulgata}
 
 The elemental imaging of \emph{P. vulgata} shells consistently showed
 repeating patterns of Mg/Ca intensity ratio changes with high Mg/Ca
-intensity ratios indicating and low ratios indicating low temperature
-periods. As examples, Figure~\ref{fig-Pat_LIBS} shows the
-2D-distribution of elemental ratios across the entire section of ORK-LT5
-and the preserved anterior side of QG1-7188-1 (additional maps can be
-found in the supplementaries). The repeating patterns are found across
-the calcitic layers that are exterior to the myostracum (layers m+2 and
-m+3) as well as the layers that are interior (m-2)
-\citep{Fenger2007-gf}. The layer m-1, which is also interior, consists
-of aragonite and is seen in Figure~\ref{fig-Pat_LIBS} in grey, as its
-Mg/Ca intensity ratio consistently falls below the range of interest
-(0.2 and above). Compared to other patelloid shells, some of whose
-interior is almost entirely made of aragonite, this layer is very thin.
-\newline
+intensity ratios indicating high temperature periods and low ratios
+indicating low temperature periods. As examples,
+Figure~\ref{fig-Pat_LIBS} shows the 2D-distribution of elemental ratios
+across the entire section of ORK-LT5 and the preserved anterior side of
+QG1-7188-1 (additional maps can be found in the supplementaries). The
+repeating patterns are found across the calcitic layers that are
+exterior to the myostracum (layers m+2 and m+3) as well as the layers
+that are interior (m-2)(see Fenger et al. \citeyearpar{Fenger2007-gf}
+for a detailed explanations of microstructural layers in \emph{P.
+vulgaata}). The layer m-1, which is also interior, consists of aragonite
+and is seen in Figure~\ref{fig-Pat_LIBS} in grey, as its Mg/Ca intensity
+ratio consistently falls below the range of interest (0.2 and above).
+Compared to other patelloid shells, some of whose interior is almost
+entirely made of aragonite, this layer is very thin. \newline
 
 \begin{figure}[H]
 
@@ -558,17 +560,17 @@ ORK-LT5 (Figure~\ref{fig-Pat_LIBS} a), which increase towards the
 anterior of the shell (0--10 mm on the x-axis).
 
 Line scans also indicate well the quasi-sinusoidal change of Mg/Ca
-intensity ratios expected based on the stable isotope data and
-elemental-imaging. That said, some of the variability of Mg/Ca intensity
-ratios within one season such as the summer period of QG1-7188-1 between
-0.5 and 2.0 mm distance to the shell edge (Figure~\ref{fig-Pat_LIBS} d),
-is visible in a more dramatic manner than it appears in the 2D-image,
-showing the downside of line-scanning as opposed to the broader milling
+intensity ratios expected based on the stable isotope data and elemental
+imaging. That said, some of the variability of Mg/Ca intensity ratios
+within one season such as the summer period of QG1-7188-1 between 0.5
+and 2.0 mm distance to the shell edge (Figure~\ref{fig-Pat_LIBS} d), is
+visible in a more dramatic manner than it appears in the 2D image. This
+shows the downside of line-scanning as opposed to the broader milling
 approach used for the analysis of carbonate powder
 \citep{Ferguson2011-zl}.
 
 Figure~\ref{fig-Pat_Comp} shows the line scan of ORK-LT5 in comparison
-to its \(\delta\)\textsuperscript{18}O-values (similar graphs for other
+to its \(\delta\)\textsuperscript{18}O values (similar graphs for other
 specimen can be found in the supplementaries). The measurements of the
 distance to the shell edge are not entirely identical, most likely
 because one growth increment can have a range of distances to the edge,
@@ -591,19 +593,19 @@ be well aligned.
 \end{figure}%
 
 Aligning the records programmatically using dynamic time warping,
-allowed us to compare them directly to determine specimen-specific
-equations and quantify the correlation of both proxies
-(Figure~\ref{fig-Pat_Corr}). The equations for all specimens are
-different but the majority (barring one: QG1-7246-1) do seem to cluster
-around shared parameters (\(\delta\)\textsuperscript{18}Ο = 0.6 -- 0.065
-* Mg/Ca). The various coefficients of determination
-(R\textsuperscript{2}) range between 0.81 (QG1-7246-1) and 0.95
-(QG1-7189-2). These specimens are also the oldest and youngest
-specimens, respectively, suggesting that lower growth rates and time
-averaging had a negative effect on the correlation of both proxies. The
-mean R\textsuperscript{2} value of the individual \emph{P. vulgata}
-specimens is 0.89, suggesting a generally good fit between the two
-proxies.
+allowed us to compare both proxies for each specimen directly to
+determine specimen-specific equations and quantify the correlation of
+both proxies (Figure~\ref{fig-Pat_Corr}). The equations for all
+specimens are different but the majority (barring one: QG1-7246-1) do
+seem to cluster around shared parameters
+(\(\delta\)\textsuperscript{18}Ο = 0.6 -- 0.065 * Mg/Ca). The various
+coefficients of determination (R\textsuperscript{2}) range between 0.81
+(QG1-7246-1) and 0.95 (QG1-7189-2). These specimens are also the oldest
+and youngest specimens, respectively, suggesting that lower growth rates
+and time averaging had a negative effect on the correlation of both
+proxies. The mean R\textsuperscript{2} value of the individual \emph{P.
+vulgata} specimens is 0.89, suggesting a generally good fit between the
+two proxies.
 
 \begin{figure}
 
@@ -619,20 +621,21 @@ vulgata} specimens.}
 \end{figure}%
 
 \subsection{\texorpdfstring{\emph{Nacella}
-sp.}{Nacella sp.}}\label{nacella-sp.}
+spp.}{Nacella spp.}}\label{nacella-spp.}
 
-The LIBS data for \emph{Nacella} sp. specimens is less straightforward
-with shells being much thinner and thus patterns being more difficult to
-make out. Both specimens (ND-1016-3 and NM-1016-3) shown as example in
-Figure~\ref{fig-Nac_LIBS} (see additional graphs in supplementaries)
-also experience increases of Mg/Ca intensity ratio towards the exterior
-of the shell, similar to the \emph{P. vulgata} specimens from Orkney.
-This intra-increment heterogeneity combined with the thinness of the
-shell, further complicates their analysis compared to \emph{P. vulgata}
-or other \emph{Patella} species \citep{Hausmann2019-fi}. Nevertheless,
-repeating patterns were visible in the anterior section of the shell,
-which were also mirrored in the inner layers (m-2) of specimens
-NM-1016-3 (Figure~\ref{fig-Nac_LIBS} b).
+The LIBS data for \emph{Nacella} spp. specimens is less straightforward
+with shells being much thinner than \emph{P. vulgata} and thus patterns
+being more difficult to discern. Both specimens (ND-1016-3 and
+NM-1016-3) shown as examples in Figure~\ref{fig-Nac_LIBS} (see
+additional graphs in supplementaries) also experience increases of Mg/Ca
+intensity ratio towards the exterior of the shell, similar to the
+\emph{P. vulgata} specimens from Orkney. This intra-increment
+heterogeneity combined with the thinness of the shell, further
+complicates their analysis compared to \emph{P. vulgata} or other
+\emph{Patella} species \citep{Hausmann2019-fi}. Nevertheless, repeating
+patterns were visible in the anterior section of the shell, which were
+also mirrored in the inner layers (m-2) of specimens NM-1016-3
+(Figure~\ref{fig-Nac_LIBS} b).
 
 \begin{figure}[H]
 
@@ -643,7 +646,7 @@ NM-1016-3 (Figure~\ref{fig-Nac_LIBS} b).
 }
 
 \caption{\label{fig-Nac_LIBS}Example LIBS maps and line scans of
-analysed \emph{Nacella} sp. specimens. (\emph{a+c}) ND-1016-3 and
+analysed \emph{Nacella} spp. specimens. (\emph{a+c}) ND-1016-3 and
 (\emph{b}+\emph{d}) NM-1016-3. Note that the ranges of Mg/Ca intensity
 ratios are not identical but are chosen arbitrarily to increase
 contrast. Areas in grey consist of low-Mg aragonite and fall outside the
@@ -653,21 +656,21 @@ to better understand the Mg/Ca ratios at the shell edge.}
 
 \end{figure}%
 
-Interestingly, the Mg/Ca intensity ratios in the \emph{Nacella} sp.
+Interestingly, the Mg/Ca intensity ratios in the \emph{Nacella} spp.
 shells were much lower (0.05--0.30) than those seen in other patelloid
-species (e.g.~0.3--0.7 in \emph{Patella vulgata} above, or 0.5--1.5 in
+species (e.g.~0.3--0.7 in \emph{P. vulgata} above, or 0.5--1.5 in
 Hausmann \emph{et al}. \citeyearpar{Hausmann2023-ih}) using the same
 emission lines. While the intensity ratio depends chiefly on the chosen
 emission lines to calculate the proportion of the chosen Magnesium to
 the chosen Calcium peak, the low ratios still indicate lower
-concentrations than seen elsewhere, or seen only in aragonitic parts of
+concentrations than seen elsewhere or seen only in aragonitic parts of
 e.g.~\emph{Patella} shells. Similar observations have been made before
 \citep{Graniero2017-io}. Strong intra-increment heterogeneities are
 visible along the exterior of the shells (m+3 layer), where Mg/Ca
 intensity ratios are higher, particularly in specimen ND-1016-3
 (Figure~\ref{fig-Nac_LIBS}). The step from lower to higher along the
 increment is not gradual, as is the case in NM-1016-3 (see inset of
-Figure~\ref{fig-Nac_LIBS} b), but rather step-wise. Sampling across this
+Figure~\ref{fig-Nac_LIBS} b), but rather stepwise. Sampling across this
 boundary in a linear scan would most likely lead to erroneous results.
 Also sampling across gradual changes as in NM-1016-3 can influence the
 overall correlation graph for a specimen.
@@ -679,11 +682,12 @@ specimens a third summer can be added to the total record, which is not
 captured by the line scans.
 
 Figure~\ref{fig-Nac_Comp} shows the line scans of ND-1016-3 and
-NM-1016-3 in comparison to their \(\delta\)\textsuperscript{18}O-values
-(similar graphs for the other \emph{Nacella} sp. specimen can be found
+NM-1016-3 in comparison to their \(\delta\)\textsuperscript{18}O values
+(similar graphs for the other \emph{Nacella} spp. specimens can be found
 in the supplementaries). Compared to the \emph{P. vulgata} records,
 these mirror each other much more clearly, due to the brief period
-recorded in the shells and its simple make-up.
+recorded in the shells and thus a lower chance of misaligning annual
+extremes.
 
 \begin{figure}
 
@@ -694,26 +698,26 @@ recorded in the shells and its simple make-up.
 }
 
 \caption{\label{fig-Nac_Comp}Comparison of LIBS line-scan and sequential
-\(\delta\)\textsuperscript{18}O-values of \emph{Nacella} sp. specimens.}
+\(\delta\)\textsuperscript{18}O-values of \emph{Nacella} spp.
+specimens.}
 
 \end{figure}%
 
-The \emph{Nacella} sp. specimens showed similarly clustered
+The \emph{Nacella} spp. specimens showed similarly clustered
 correlations, which interestingly were not grouped by species. In fact,
-specimens ND-1016-3 (\emph{Nacella deaureata)} and NM-1016-3
-(\emph{Nacella magellanica}) are almost identical in their fitted
-equations (Figure~\ref{fig-Nac_Corr}). Both also share a high
-coefficient of determination (R\textsuperscript{2}) of 0.95 and 0.92
-respectively, with the remaining specimens being somewhat lower
-(R\textsuperscript{2} = 0.76 for ND-1016-4 and R\textsuperscript{2}=0.84
-for NM-1016-3). The mean R\textsuperscript{2} value for each
-\emph{Nacella} species is 0.86 for \emph{Nacella deaureata} and 0.88 for
-\emph{Nacella magellanica}. Why two specimens of different species are
-so well aligned is not entirely certain and randomness cannot for now be
-ruled out. That said, since they both have a high R\textsuperscript{2}
-value, it might just be that they were both minimally affected by
-factors other than SST, including the sampling location of our line
-scans.
+specimens ND-1016-3 (\emph{Nacella deaureata)} and NM-1016-3 (\emph{N.
+magellanica}) are almost identical in their fitted equations
+(Figure~\ref{fig-Nac_Corr}). Both also share a high coefficient of
+determination (R\textsuperscript{2}) of 0.95 and 0.92 respectively, with
+the remaining specimens being somewhat lower (R\textsuperscript{2} =
+0.76 for ND-1016-4 and R\textsuperscript{2}=0.84 for NM-1016-3). The
+mean R\textsuperscript{2} value for each \emph{N.} species is 0.86 for
+\emph{N. deaureata} and 0.88 for \emph{N. magellanica}. Why two
+specimens of different species are so well aligned is not entirely
+certain and randomness cannot for now be ruled out. That said, since
+they both have a high R\textsuperscript{2} value, it might just be that
+they were both minimally affected by factors other than SST, including
+the sampling location of our line scans.
 
 \begin{figure}
 
@@ -723,7 +727,7 @@ scans.
 
 }
 
-\caption{\label{fig-Nac_Corr}Correlation graphs for \emph{Nacella} sp.
+\caption{\label{fig-Nac_Corr}Correlation graphs for \emph{Nacella} spp.
 specimens}
 
 \end{figure}%
@@ -731,15 +735,16 @@ specimens}
 \section{Discussion}\label{Discussion}
 
 The Mg/Ca ratios from the 2D elemental imaging present positive results
-on SST being the main factor behind Mg/Ca concentration in three
-Atlantic limpet species. Annually repeating patterns of increasing
-(spring/summer) and decreasing (autum/winter) SST were also visible in
-the line scans, albeit less straightforward than in the 2D-data.
-Nevertheless, the resulting R\textsuperscript{2}-values for each species
-were high (\emph{P. vulgata mean R\textsuperscript{2}}=0.89, \emph{N.
-deaureata mean R\textsuperscript{2}}=0.86\emph{, N. magellanica mean
+suggesting that SST is the main factor influencing variations in Mg/Ca
+ratios in three Atlantic limpet species. Annually repeating patterns of
+increasing (spring/summer) and decreasing (autum/winter) SST were also
+visible in the line scans, albeit less straightforward than in the
+2D-data. Nevertheless, the resulting R\textsuperscript{2}-values for
+each species were high (\emph{P. vulgata mean
+R\textsuperscript{2}}=0.89, \emph{N. deaureata mean
+R\textsuperscript{2}}=0.86\emph{, N. magellanica mean
 R\textsuperscript{2}}=0.88). These results are similar to previously
-published data on \emph{Patella} sp. shells (Table
+published data on other \emph{Patella} species shells (Table
 \hyperref[Table_2]{2}): R\textsuperscript{2} values of \emph{P.
 depressa} lie between 0.78 and 0.87 \citep{Garcia-Escarzaga2021-ij}, for
 \emph{P. caerulea} from the Mediterranean between 0.78 and 0.96 ---
@@ -750,16 +755,17 @@ ratios in increments with rich organic contents \citep{Hausmann2019-fi}.
 \fontsize{8pt}{8pt}\selectfont
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1250}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1562}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1094}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2031}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.4062}}@{}}
-\caption{Correlations of Mg/Ca with \(\delta\)\textsuperscript{18}O and
-SST found in other studies. Bold R\textsuperscript{2} values are
-interpreted as outliers. * indicates that only SST data and no other
-geochemical data was used. ** these samples were used to determine a
-shared R\textsuperscript{2}-value of 0.79.}\tabularnewline
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1733}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1733}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1733}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1733}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.3067}}@{}}
+\caption{Correlations of Mg/Ca ratios with
+\(\delta\)\textsuperscript{18}O values and SST found in other studies.
+Bold R\textsuperscript{2} values are interpreted as outliers. *
+indicates that only SST data and no other geochemical data was used. **
+these samples were used to determine a shared R\textsuperscript{2}-value
+of 0.79.}\tabularnewline
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Species
@@ -826,24 +832,24 @@ Study
 \normalsize
 
 \emph{P. rustica} has two studied specimens (JL1 and JL2) with
-R\textsuperscript{2}-values of 0.02 and 0.8, respectively
+R\textsuperscript{2}-values of 0.02 and 0.80, respectively
 \citep{Ferguson2011-zl} (Figure~\ref{fig-Ferg}). Together with the data
 from two \emph{P. caerulea} shells (JM00 and JM30 with
 R\textsuperscript{2}-values of 0.69 and 0.83), the data from JL2 was
-used determine a general Mg/Ca-SST relationship with an
-R\textsuperscript{2}-value of 0.79. JL1 was disregarded in that
+used to determine a general Mg/Ca-SST relationship with an
+R\textsuperscript{2} value of 0.79. JL1 was disregarded in that
 calculation, as well as the second year of growth in JM00, which
 produced anomalous data. While no additional information about those
-specimens is available, it seems likely that discarded the Mg/Ca ratios
+specimens is available, it seems likely that the discarded Mg/Ca ratios
 from JM00, which were interpreted as an ontogenetic trend, were
 potentially influenced by the same intra-increment heterogeneity we see
 in some of our shell specimens as well. Since these shells were analysed
 by homogenising the carbonate powder of the m+2 layer and the more
-exterior m+3 layer, these heterogeneities could potentially increased
-the Mg/Ca ratio unpredictably, leading to what might look like an
-ontogenetic trend in a linear dataset. Whether these anomalies affected
-JL1 in the same way, albeit stronger, is not clear but it might well be
-possible.
+exterior m+3 layer, these heterogeneities could have potentially
+increased the Mg/Ca ratio unpredictably, leading to what might look like
+an ontogenetic trend in a linear dataset. Whether these anomalies
+affected JL1 in the same way, albeit stronger, is not clear but it might
+well be possible.
 
 \begin{figure}
 
@@ -860,9 +866,9 @@ specimens.}
 
 Another shell whose results we aim to explain further is ORK-LT5, which
 has previously been shown to have no substantial correlation with
-\(\delta\)\textsuperscript{18}O or SST in implication
-\citep{Graniero2017-io}. Different to other specimens of this study, we
-were able to resample this specimen and to acquire Mg/Ca data on a
+\(\delta\)\textsuperscript{18}O values or SST by implication
+\citep{Graniero2017-io}. In contrast to other specimens in this study,
+we were able to resample this specimen and acquire Mg/Ca data on a
 slightly higher resolution (20--30 µm spots in a 100 µm raster compared
 to 50 µm spots spaced at 150--300 µm) and using 2 dimensions, as well as
 using a continuous high-resolution line-scan at (20--30 µm spots spaced
@@ -889,17 +895,17 @@ and \(\delta\)\textsuperscript{18}O-values}
 
 \end{figure}%
 
-We were not able to resample the \emph{Nacella} sp. specimens in
+We were not able to resample the \emph{Nacella} spp. specimens in
 Graniero \emph{et al.} \citeyearpar{Graniero2017-io}, which had
-similarly unrelated records of \(\delta\)\textsuperscript{18}O and Mg/Ca
-and pointed to no relationship between elemental ratios and SST at all.
-However, we were able to source other modern specimens of the same
-species from Tierra del Fuego, which shall serve here as an indicator.
-Similar to other patelloid shells, the results of the \emph{Nacella}
-specimens in our study were successful with high
-R\textsuperscript{2}-values (0.76--0.95) and suggest Mg/Ca as a reliable
+similarly unrelated records of \(\delta\)\textsuperscript{18}O values
+and Mg/Ca ratios and pointed to no relationship between elemental ratios
+and SST at all. However, we were able to source other modern specimens
+of the same species from Tierra del Fuego, which shall serve here as an
+indicator. Similar to other patelloid shells, the results of the
+\emph{Nacella} specimens in our study were successful with high
+R\textsuperscript{2} values (0.76--0.95) and suggest Mg/Ca as a reliable
 proxy for SST (Figure~\ref{fig-Nac_Comp} and supplementaries). Why these
-results are different from the studied \emph{Nacella} sp. specimens in
+results are different from the studied \emph{Nacella} spp. specimens in
 Graniero \emph{et al}. \citeyearpar{Graniero2017-io} is not obvious, but
 the occasional alignment of the Mg/Ca and
 \(\delta\)\textsuperscript{18}O records of their shells (Figure 6 in
@@ -907,24 +913,25 @@ Graniero \emph{et al}. \citeyearpar{Graniero2017-io}) indicate that
 there is some relationship that --- potentially due to the low sampling
 resolution or intra-increment heterogeneity --- is not perfectly
 visible, leading to an overall result of an uncorrelated relationship
-between Mg/Ca and SST.
+between Mg/Ca ratios and SST.
 
 \section{Conclusion}\label{conclusion}
 
-This study presents high-resolution and 2D information on Mg/Ca
-concentrations in modern and archaeological patelloid shells and their
-relationship to sea surface temperature. The results for \emph{Patella
-vulgata}, \emph{Nacella deaureata}, and \emph{Nacella magellanica} were
-consistently promising with mean R\textsuperscript{2}-values of 0.89,
-0.86, and 0.88 respectively.
+This study uses LIBS as a novel analytical tool to present
+high-resolution and 2D information on Mg/Ca concentrations in modern and
+archaeological patelloid shells and their relationship to sea surface
+temperature. The results for \emph{P. vulgata}, \emph{N. deaureata}, and
+\emph{N. magellanica} were consistently promising with mean
+R\textsuperscript{2} values of 0.89, 0.86, and 0.88 respectively.
 
-LIBS elemental imaging provided some insight into elemental anomalies
-found particulary in the external parts (m+3 layer) of the shell, which
+LIBS elemental imaging provided insight into elemental anomalies found
+particulary in the external parts (m+3 layer) of the shell, which
 introduce intra-incremental heterogeneity and which cannot be reconciled
 with modern SST changes or SST changes recorded in the
-\(\delta\)\textsuperscript{18}O of the same shells. Our 2D approach
-allowed us to avoid these areas of intra-increment heterogeneity and
-focus on areas that are predominantly controlled by changes in SST.
+\(\delta\)\textsuperscript{18}O values of the same shells. Our 2D
+approach allowed us to avoid these areas of intra-increment
+heterogeneity and focus on areas that are predominantly controlled by
+changes in SST.
 
 These results are particularly promising for future analyses of
 patelloid shells for the study of season of collection in archaeological
@@ -933,13 +940,12 @@ the past. Shells of the species studied here are widely available along
 the European Atlantic façade and the Argentinian coastline and make up a
 significant part of marine mollusc remains in archaeological sites of
 those regions
-\citep{Colonese2011-ab, Villagran2011-ld, Zangrando2016-yl}. Improving
-their analysis in terms of cost and time efficiency through the benefits
-of LIBS, which can be used in this context as a screening tool for
-targeted \(\delta\)\textsuperscript{18}O analysis focusing on annual
-minima and maxima revealed in the Mg/Ca record, will allow researchers
-to increase sample numbers and produce larger and more in-depth climatic
-studies than previously possible.
+\citep{Colonese2011-ab, Villagran2011-ld, Zangrando2016-yl}. By using
+LIBS as a screening tool for targeted \delta\^{}\{18\}O analysis,
+focusing on annual minima and maxima revealed in the Mg/Ca record,
+researchers can improve cost and time efficiency. This novel method will
+enable them to increase sample numbers and produce larger, more in-depth
+climatic studies than previously possible.
 
 
 \renewcommand\refname{References}
